[package]
name = "bevy-tank-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
fastrand = "1.8.0"
bevy-transform-utils = { git = "https://github.com/Abb4/bevy-transform-utils" }
bevy-rand-utils = { git = "https://github.com/Abb4/bevy-rand-utils" }
bevy-mouse-position-component = { git = "https://github.com/Abb4/bevy-mouse-position-component" }
leafwing-input-manager = "0.5.2"
